plugins {
    id 'java-library'
    id 'fabric-loom'
    id 'com.gradleup.shadow' version '9.0.0-beta4'
}

repositories {
    mavenCentral()
    maven { url = "https://maven.fabricmc.net/" }
    maven {
        url = "https://maven.dediamondpro.dev/releases/"
        name = "DeDiamondPro"
        content {
            includeGroup "dev.dediamondpro"
        }
    }
    maven {
        url = uri('https://mcef-download.cinemamod.com/repositories/releases')
        name = "CinemaMod"
        content {
            excludeGroup "dev.dediamondpro"
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
}

dependencies {
    minecraft "com.mojang:minecraft:1.20.6"
    mappings "net.fabricmc:yarn:1.20.6+build.3"
    modImplementation "net.fabricmc:fabric-loader:0.16.3"
    modImplementation "net.fabricmc.fabric-api:fabric-api:0.100.8+1.20.6"


    implementation "com.twelvemonkeys.imageio:imageio-webp:3.12.0"
    implementation "com.jcraft:jsch:0.1.55"
    implementation "com.vladsch.flexmark:flexmark:0.62.2"
    implementation "org.jsoup:jsoup:1.15.3"
    implementation 'org.jline:jline:3.1.3'
    implementation 'org.fusesource.jansi:jansi:1.8'
    implementation 'com.fifesoft:rsyntaxtextarea:3.6.0'
    modImplementation("dev.dediamondpro:minemark-minecraft-1.20.4-fabric:1.2.3") {
        exclude(group: "dev.dediamondpro", module: "minemark")
    }
    implementation "dev.dediamondpro:minemark-core:1.2.3"

    shadow "com.twelvemonkeys.imageio:imageio-webp:3.12.0"
    shadow "com.jcraft:jsch:0.1.55"
    shadow "com.vladsch.flexmark:flexmark:0.62.2"
    shadow "org.jsoup:jsoup:1.15.3"
    shadow 'org.jline:jline:3.1.3'
    shadow 'org.fusesource.jansi:jansi:1.8'

    modCompileOnly('com.cinemamod:mcef:2.1.6-1.20.4')
    modImplementation('com.cinemamod:mcef-fabric:2.1.6-1.20.4') {
        transitive = true
    }
}

shadowJar {
    configurations = [project.configurations.shadow]
    exclude("META-INF")
}

remapJar {
    dependsOn(shadowJar)
    mustRunAfter(shadowJar)
    inputFile = shadowJar.archiveFile.get().asFile
}

build.dependsOn shadowJar

